src/style.css
body {
  height: 100vh;
}

ons-button,
ons-button.button--material {
  background-color: transparent !important;
}

ons-toolbar {
  height: 0px !important;
  position: fixed !important;
  bottom: 0px !important;
}

ons-toolbar.toolbar-hidden {
  display: none;
}

ons-toolbar.toolbar-showing {
  display: inline-block;
}

ons-toolbar-button, button {
  cursor: pointer;
  display: flex;
  align-items: center;
}

.title-codec-duration {
  margin-bottom: .5rem;
  flex-wrap: wrap;
}
.react-grid-item {
  overflow: hidden;
}

.player-controls {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

.tracklist hr {
  margin-top: 5px;
  margin-bottom: 5px;
}

.alum-modal .scrolling-tracklist {
  width: 100%;
  position: absolute !important;
  z-index: 100;
  overflow: hidden;
  max-width: 100%;

}
.album-title-text-default {
  height: 100px;
  font-size: 14px;
  color: black;
  text-wrap: initial;
  line-height: 1.5rem;
}
.grid-tracklist {
  font-size: 10px;
  display: flex;
  flex-direction: column;
  z-index: 100;
  margin: 1em 2em 1em 2em;
  padding-bottom: 70px;
}

.bpm-track-button {
  display: block;
}
.main-album-grid {
  width: 100%;
}
.album-grid-css {
  display: grid;
  gap: 16px;
  padding: 16px;
  overflow-x: auto;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
  grid-template-columns: repeat(5, 1fr);
  box-sizing: border-box;
  position: relative;
}

.album .album-image {
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
  max-width: 100%;
  object-fit: cover;
}

.album-grid-css .button--large--cta {
  padding: 0;
}
.album-grid-0 {
  grid-template-columns: repeat(1, 1fr);
  gap: 2rem;
}
.album-grid-1 {
  grid-template-columns: repeat(2, 1fr);
  gap: 2rem;
}
.album-grid-2 {
  grid-template-columns: repeat(3, 1fr);
  gap: 2rem;
}
.album-grid-3 {
  grid-template-columns: repeat(4, 1fr);
  gap: 2rem;
}
.album-grid-4 {
  grid-template-columns: repeat(5, 1fr);
  gap: 2rem;
}
.album-grid-5 {
  grid-template-columns: repeat(6, 1fr);
  gap: 2rem;
}
.album-grid-6 {
  grid-template-columns: repeat(7, 1fr);
  gap: 1rem;
}

.album-grid-7 {
  grid-template-columns: repeat(8, 1fr);
  gap: 1rem;
}
.album-grid-8 {
  grid-template-columns: repeat(9, 1fr);
  gap: 1rem;
}
.album-grid-8 .album-text-info {
  font-size: .5rem;
}
.album-grid-9 {
  grid-template-columns: repeat(10, 1fr);
  gap: 1rem;
}

.album-grid-0 .album-text-info,
.album-grid-1 .album-text-info {
  font-size: 4rem;
  line-height: 4.25rem;
}

.album-grid-2 .album-text-info {
  font-size: 1.5rem;
  line-height: 1.75rem;
}

.album-grid-3 .album-text-info,
.album-grid-4 .album-text-info,
.album-grid-5 .album-text-info {
  font-size: .75rem;
  line-height: 1rem;
}
.album-grid-6 .album-text-info,
.album-grid-7 .album-text-info,
.album-grid-8 .album-text-info,
.album-grid-9 .album-text-info {
  font-size: .5rem;
  line-height: 1rem;
}

.disc-icon {
  opacity: .2;
}
.album-no-artwork {  
  position: relative;
}

.album-text-info {
  position: absolute;
  top: 0;
  font-size: 1rem;
  color: black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100%;
  text-wrap: initial;
  line-height: 1.5rem;
}

.album-background-image {
  overflow: hidden;
  height: 100vh;
}

/* 
    Album Grid view images and containers 
*/

.album-image {
  background-position: center;
}
.modal__content {
  height: 100vh;
}
.handle-container {
  z-index: 50;
  height: 0px;
  width: 0px;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.5;
}
.handle {
  width: 40px;
  height: 40px;
}
.loading-message {
  width: 300px;
  margin: auto auto;
  margin-top: 200px;
  text-align: center;
}

.loading-text {
  margin-top: 20px;
  font-size: 1.5em;
}
.album-cover {
  overflow: hidden;
}

.control-bar {
  visibility: visible;
  display: flex;
  position: fixed;
  z-index: 300;
  opacity: 0.95;
  bottom: 0;
  width: 100%;
  box-shadow: -1px -5px 16px #888888;
  padding: 10px 10px 25px 10px;
  background-color: white;
}

.light-theme .page__background {
  background-color: #d9d9d9 !important;
}

.control-bar.hidden {
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s 0.5s, opacity 0.5s linear;
}

.now-playing {
  display: flex;
  margin: 0 auto;
  padding: 0px 6px 0px 6px;
}
.album-size-slider {
  width: 50%;
  margin: 0 auto;
}

.playing-inset > {
  height: 100px;
  max-height: 100px;
  position: absolute;
  overflow: hidden;
  width: 100%;
  z-index: 100;
  max-width: 100%;
}

.genre-selector {
  font-size: 40px !important;
  text-align: center;
  flex-direction: row;
  display: flex;
  align-self: center;
  white-space: normal;
  flex-grow: 0;
  white-space: nowrap;
}

.genre-menu {
  
}
.player-selector {
  font-size: 40px !important;
  display: flex;
  text-align: center;
  flex-direction: row;
  align-self: center;
  white-space: normal;
}
.player-selector ons-toolbar-button {
  margin: 0 auto;
}

.global-controls {
  display: flex;
  column-gap: 2rem;
  row-gap: 1rem;
  flex-wrap: wrap;
}
.now-playing-container {
  width: 80%;
}
.alpha-shuffle,
.theme-control {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

button.genre-choice,
button.search-button {
  text-transform: none;
  border: solid;
  border-color: rgb(179, 177, 177);
  border-width: 1px;
  margin-left: 1em;
  margin: 5px 5px 5px 0px;
  padding: 2px 12px;
}
button.search-clear-button {
  border: none;
  z-index: 90;
  min-width: 1rem !important;
  background: #c1c1c19e;
  border-radius: 1rem;
  height: 1.5rem;
  width: 1.5rem;
  cursor: pointer;
  color: #8c8c8c;
  opacity: .8;
  position: absolute;
  right: .5rem; 
  top: .5rem;
}

button.order-select,
button.theme-select {
  width: 70px;
}
.search {
  display: flex;
  align-items: center;
}
input.search-input {
  height: 2.5rem;
  font-size: 1.25rem;
}
.search-clear {
  background-color: #dcdcdc;
  border-radius: 5px;
}
/* ... */

